--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -61,7 +61,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/btnCambiaFoto"
             />
-        <EditText
+        <TextView
             android:id="@+id/edtCedula"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,7 +87,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/btnCambiaFoto"
             />
-        <EditText
+        <TextView
             android:id="@+id/edtNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -113,7 +113,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/btnCambiaFoto"
             />
-        <EditText
+        <TextView
             android:id="@+id/edtApellidos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -140,7 +140,7 @@
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/btnCambiaFoto"
         />
-        <EditText
+        <TextView
             android:id="@+id/edtCarrera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
