proyecto funcionando, cosulta matricula por semestre

--- a/app/src/main/res/layout/activity_academico.xml
+++ b/app/src/main/res/layout/activity_academico.xml
@@ -70,6 +70,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:gravity="center"
+            android:onClick="selectSemestre"
         />
         <Button
             android:id="@+id/btnConsultaMatricular"
